--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,25 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        run: echo $DOCKER_PASSWORD | docker login --username TOSIFhk --password-stdin
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            my-payment-gateway:latest
-            my-payment-gateway:${{ github.sha }}
+        run: |
+          docker build -t my-payment-gateway .
+          docker tag my-payment-gateway:latest TOSIFhk/my-payment-gateway:latest
+          docker push TOSIFhk/my-payment-gateway:latest
 
       - name: Deploy to production
-        run: |
-          docker-compose -f docker-compose.yml up -d
+        run: docker-compose -f docker-compose.yml up -d
