--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to Docker Hub
-        run: echo $DOCKER_PASSWORD | docker login --username TOSIFhk --password-stdin
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username TOSIFhk --password-stdin
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
 
       - name: Build and push Docker image
         run: |
