--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,8 +32,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            payment-gateway:latest
-            payment-gateway:${{ github.sha }}
+            my-payment-gateway:latest
+            my-payment-gateway:${{ github.sha }}
 
       - name: Deploy to production
         run: |
